changed all the blue color codes to #3f51b5, still need to fix the increment/decrement stuff for the pages with multiple sliders, and need to fix the tooltip not showing stuff, make the sliders always show the value of the slider and remove the popup, UI might look better and is clearer to the user

--- a/software/src/omaha/templates/css/styles.css
+++ b/software/src/omaha/templates/css/styles.css
@@ -43,7 +43,7 @@ iron-toolbar {
 }
 
 paper-button {
-  background-color: #3367d6;
+  background-color: #3f51b5;
   margin: 0.5em 1em 0.5em 0;
   width: 10em;
 }
